tests/ui/macros/repeated-macro-expansion-error.stderr
error[E0107]: associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/repeated-macro-expansion-error.rs:12:20
   |
LL |                 S::f::<i64>();
   |                    ^------- help: remove the unnecessary generics
   |                    |
   |                    expected 0 generic arguments
...
LL | impl_add!(a b);
   | -------------- in this macro invocation
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/repeated-macro-expansion-error.rs:5:8
   |
LL |     fn f() {}
   |        ^
   = note: this error originates in the macro `impl_add` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0107]: associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/repeated-macro-expansion-error.rs:12:20
   |
LL |                 S::f::<i64>();
   |                    ^------- help: remove the unnecessary generics
   |                    |
   |                    expected 0 generic arguments
...
LL | impl_add!(a b);
   | -------------- in this macro invocation
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/repeated-macro-expansion-error.rs:5:8
   |
LL |     fn f() {}
   |        ^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this error originates in the macro `impl_add` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
